--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,12 +26,8 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: ./docker-compose.yml
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/students_registration_system:latest
+        run: |
+          docker buildx bake -f ./docker-compose.yml web db --push --tag ${{ secrets.DOCKERHUB_USERNAME }}/students_registration_system:latest
 
       - name: Run docker compose (Test)
         uses: isbang/compose-action@v1.4.1
@@ -46,9 +42,4 @@ jobs:
       - name: Run Test in student-statistics-process service
         run: |
           docker exec -it students_registration_system-student-statistics-process-1 bash
-          java Main  
-          
-          
-          
-
-        
+          java Main
