--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,12 +10,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     
-
-      
     
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         
         
       - name: Login to Docker Hub
@@ -23,18 +21,13 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
+
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-        
-      
+        uses: docker/setup-buildx-action@v3
+
       - name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: ./docker-compose.yml
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/students_registration_system:latest
+        run: |
+          docker buildx bake -f ./docker-compose.yml web db --push --tag ${{ secrets.DOCKERHUB_USERNAME }}/students_registration_system:latest
 
       - name: Run docker compose (Test)
         uses: isbang/compose-action@v1.4.1
@@ -49,4 +42,4 @@ jobs:
       - name: Run Test in student-statistics-process service
         run: |
           docker exec -it students_registration_system-student-statistics-process-1 bash
-          java Main  
+          java Main
