--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+version: "3.9"
 services:
   student-statistics-process:
     image: 5aleda4rf/student-statistics-process
@@ -15,3 +16,5 @@ services:
       - "81:81"
     stdin_open: true
     tty: true
+
+
