--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
         uses: isbang/compose-action@v1.4.1
         with:
           compose-file: ./docker-compose.yml
-          services: student-statistics-process registeration-process
+          services: 5aleda4rf/student-statistics-process 5aleda4rf/registeration-process
       - name: Run Test in registeration-process service
         run: |
           docker exec -it students_registration_system-registeration-process-1 bash
