--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,16 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-
+        
+        
+      - name: Build and run docker-image with the Dockerfile
+        run: |
+          docker build --tag registeration-process:v2.0 .
+          docker run -it -v registeration-process:v2.0
+          
+          
       - name: Build and run docker-compose
         run: |
           docker-compose up -d
+          
 
