--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build and run docker-image with the Dockerfile
         run: |
           docker build --tag registeration-process:v2.0 .
-          docker run -it -v registeration-process:v2.0
+          docker run -it registeration-process:v2.0
           
           
       - name: Build and run docker-compose
