--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,20 @@ version: "3.9"
 services:
   student-statistics-process:
     image: 5aleda4rf/student-statistics-process
-    volumes:
-      - C:/Users/5aleda4rf/IdeaProjects/students_registration_system/app/data/batch:/app/data/batch
+#    volumes:
+#      - C:/Users/5aleda4rf/IdeaProjects/students_registration_system/app/data/batch:/app/data/batch
     ports:
       - "80:80"
     stdin_open: true
     tty: true
   registeration-process:
     image: 5aleda4rf/registeration-process
-    volumes:
-      - C:/Users/5aleda4rf/IdeaProjects/students_registration_system/app/data/batch:/app/data/batch
+#    volumes:
+#      - C:/Users/5aleda4rf/IdeaProjects/students_registration_system/app/data/batch:/app/data/batch
     ports:
       - "81:81"
     stdin_open: true
     tty: true
 
 
+# Note:- Volumes Comment to pull image with shared mounted folder without any problem related with fixed local folder path
