--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,22 @@
+# test failed ci
+
 version: "3.9"
 services:
   student-statistics-process:
-    image: 5aleda4rf/student-statistics-process
-<<<<<<< Updated upstream
-=======
-#    volumes:
-#      - C:/Users/5aleda4rf/IdeaProjects/students_registration_system/app/data/batch:/app/data/batch
->>>>>>> Stashed changes
+    #    volumes:
+    #      - C:/Users/5aleda4rf/IdeaProjects/students_registration_system/app/data/batch:/app/data/batch
+
     ports:
       - "80:80"
     stdin_open: true
     tty: true
   registeration-process:
     image: 5aleda4rf/registeration-process
-<<<<<<< Updated upstream
-=======
-#    volumes:
-#      - C:/Users/5aleda4rf/IdeaProjects/students_registration_system/app/data/batch:/app/data/batch
->>>>>>> Stashed changes
+
+    #    volumes:
+    #      - C:/Users/5aleda4rf/IdeaProjects/students_registration_system/app/data/batch:/app/data/batch
+
     ports:
       - "81:81"
     stdin_open: true
     tty: true
-
-
