--- a/.github/workflows/Main-CI.yml
+++ b/.github/workflows/Main-CI.yml
@@ -14,8 +14,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        
-        
+
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -24,13 +24,15 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-        
-        
+
+
       - name: Build and run docker-image with the Dockerfile
         run: |
           docker build --tag registeration-process:v2.0 .
-          
+
       - name: Build and run docker-compose
         run: |
+          docker-compose build
           docker-compose up -d
-
+          docker-compose down
+          
