--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
   student-statistics-process:
     build: .
     image: 5aleda4rf/student-statistics-process:latest
-#    volumes:
-#      - C:\Users\5aleda4rf\IdeaProjects\data:/app/data/batch
+    volumes:
+      - ./data:/app/data/batch
     ports:
       - "80:80"
     stdin_open: true
@@ -14,8 +14,8 @@ services:
   registeration-process:
     build: .
     image: 5aleda4rf/registeration-process:latest
-#    volumes:
-#      - C:\Users\5aleda4rf\IdeaProjects\data:/app/data/batch
+    volumes:
+      - ./data:/app/data/batch
     ports:
       - "81:81"
     stdin_open: true
