--- a/.github/workflows/Main-CI.yml
+++ b/.github/workflows/Main-CI.yml
@@ -14,7 +14,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
+        
+      - name: Set up OpenJDK 19
+        uses: actions/setup-java@v2
+        with:
+          java-version: '19'
+          distribution: 'adopt'
+          
+      - name: Build Java code
+        run: javac ./src/Main.java
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
