--- a/.github/workflows/Main-CI.yml
+++ b/.github/workflows/Main-CI.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        
+
       - name: Set up OpenJDK 19
         uses: actions/setup-java@v2
         with:
@@ -22,8 +22,9 @@ jobs:
           distribution: 'adopt'
           
       - name: Build Java code
-        run: javac ./src/Main.java
-
+        run: |
+          javac ./src/Main.java
+        
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -34,7 +35,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
 
-      - name: Build and run docker-image with the Dockerfile
+      - name: Build the docker-image with the Dockerfile
         run: |
           docker build --tag registeration-process:v2.0 .
 
